Altered VPN wording

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -486,7 +486,7 @@
                       <span class="help-block" data-i18n="[html]settings#transport-mode#help-text">
                         Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it
                         doesn't provide obfuscation. It is <strong>not recommended</strong>
-                        unless VPN-like behavior is required.
+                        for bypassing most firewalls.
                       </span>
                     </fieldset>
                   </form>
