--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -8359,6 +8359,9 @@ body[dir="rtl"] #settings-accordion .accordion-heading .accordion-expand-icon {
 #settings-accordion form {
   margin: 0;
 }
+.value-error-alert {
+  z-index: 1010;
+}
 .settings-reset {
   *zoom: 1;
   margin-bottom: 5px;
@@ -8392,6 +8395,9 @@ body[dir="rtl"] .vpn-incompatible-msg.label {
 }
 .port-entry {
   width: 5em;
+}
+.local-port-unique {
+  color: #b94a48;
 }
 #EgressRegion {
   width: 300px;
@@ -12571,14 +12577,14 @@ case"opacity":k.gradient&&!k[a]("stroke-opacity")&&q(i,{"stroke-opacity":p>1?p/1
 
 
 /* JQUERY.SCROLLTO */
+/* https://github.com/flesler/jquery.scrollTo */
 /**
- * Copyright (c) 2007-2014 Ariel Flesler - aflesler<a>gmail<d>com | http://flesler.blogspot.com
+ * Copyright (c) 2007-2015 Ariel Flesler - aflesler<a>gmail<d>com | http://flesler.blogspot.com
  * Licensed under MIT
  * @author Ariel Flesler
- * @version 1.4.14
+ * @version 2.1.1
  */
-;(function(k){'use strict';k(['jquery'],function($){var j=$.scrollTo=function(a,b,c){return $(window).scrollTo(a,b,c)};j.defaults={axis:'xy',duration:0,limit:!0};j.window=function(a){return $(window)._scrollable()};$.fn._scrollable=function(){return this.map(function(){var a=this,isWin=!a.nodeName||$.inArray(a.nodeName.toLowerCase(),['iframe','#document','html','body'])!=-1;if(!isWin)return a;var b=(a.contentWindow||a).document||a.ownerDocument||a;return/webkit/i.test(navigator.userAgent)||b.compatMode=='BackCompat'?b.body:b.documentElement})};$.fn.scrollTo=function(f,g,h){if(typeof g=='object'){h=g;g=0}if(typeof h=='function')h={onAfter:h};if(f=='max')f=9e9;h=$.extend({},j.defaults,h);g=g||h.duration;h.queue=h.queue&&h.axis.length>1;if(h.queue)g/=2;h.offset=both(h.offset);h.over=both(h.over);return this._scrollable().each(function(){if(f==null)return;var d=this,$elem=$(d),targ=f,toff,attr={},win=$elem.is('html,body');switch(typeof targ){case'number':case'string':if(/^([+-]=?)?\d+(\.\d+)?(px|%)?$/.test(targ)){targ=both(targ);break}targ=win?$(targ):$(targ,this);if(!targ.length)return;case'object':if(targ.is||targ.style)toff=(targ=$(targ)).offset()}var e=$.isFunction(h.offset)&&h.offset(d,targ)||h.offset;$.each(h.axis.split(''),function(i,a){var b=a=='x'?'Left':'Top',pos=b.toLowerCase(),key='scroll'+b,old=d[key],max=j.max(d,a);if(toff){attr[key]=toff[pos]+(win?0:old-$elem.offset()[pos]);if(h.margin){attr[key]-=parseInt(targ.css('margin'+b))||0;attr[key]-=parseInt(targ.css('border'+b+'Width'))||0}attr[key]+=e[pos]||0;if(h.over[pos])attr[key]+=targ[a=='x'?'width':'height']()*h.over[pos]}else{var c=targ[pos];attr[key]=c.slice&&c.slice(-1)=='%'?parseFloat(c)/100*max:c}if(h.limit&&/^\d+$/.test(attr[key]))attr[key]=attr[key]<=0?0:Math.min(attr[key],max);if(!i&&h.queue){if(old!=attr[key])animate(h.onAfterFirst);delete attr[key]}});animate(h.onAfter);function animate(a){$elem.animate(attr,g,h.easing,a&&function(){a.call(this,targ,h)})}}).end()};j.max=function(a,b){var c=b=='x'?'Width':'Height',scroll='scroll'+c;if(!$(a).is('html,body'))return a[scroll]-$(a)[c.toLowerCase()]();var d='client'+c,html=a.ownerDocument.documentElement,body=a.ownerDocument.body;return Math.max(html[scroll],body[scroll])-Math.min(html[d],body[d])};function both(a){return $.isFunction(a)||$.isPlainObject(a)?a:{top:a,left:a}}return j})}(typeof define==='function'&&define.amd?define:function(a,b){if(typeof module!=='undefined'&&module.exports){module.exports=b(require('jquery'))}else{b(jQuery)}}));
-
+(function(f){"use strict";"function"===typeof define&&define.amd?define(["jquery"],f):"undefined"!==typeof module&&module.exports?module.exports=f(require("jquery")):f(jQuery)})(function($){"use strict";function n(a){return!a.nodeName||-1!==$.inArray(a.nodeName.toLowerCase(),["iframe","#document","html","body"])}function h(a){return $.isFunction(a)||$.isPlainObject(a)?a:{top:a,left:a}}var p=$.scrollTo=function(a,d,b){return $(window).scrollTo(a,d,b)};p.defaults={axis:"xy",duration:0,limit:!0};$.fn.scrollTo=function(a,d,b){"object"=== typeof d&&(b=d,d=0);"function"===typeof b&&(b={onAfter:b});"max"===a&&(a=9E9);b=$.extend({},p.defaults,b);d=d||b.duration;var u=b.queue&&1<b.axis.length;u&&(d/=2);b.offset=h(b.offset);b.over=h(b.over);return this.each(function(){function k(a){var k=$.extend({},b,{queue:!0,duration:d,complete:a&&function(){a.call(q,e,b)}});r.animate(f,k)}if(null!==a){var l=n(this),q=l?this.contentWindow||window:this,r=$(q),e=a,f={},t;switch(typeof e){case "number":case "string":if(/^([+-]=?)?\d+(\.\d+)?(px|%)?$/.test(e)){e= h(e);break}e=l?$(e):$(e,q);if(!e.length)return;case "object":if(e.is||e.style)t=(e=$(e)).offset()}var v=$.isFunction(b.offset)&&b.offset(q,e)||b.offset;$.each(b.axis.split(""),function(a,c){var d="x"===c?"Left":"Top",m=d.toLowerCase(),g="scroll"+d,h=r[g](),n=p.max(q,c);t?(f[g]=t[m]+(l?0:h-r.offset()[m]),b.margin&&(f[g]-=parseInt(e.css("margin"+d),10)||0,f[g]-=parseInt(e.css("border"+d+"Width"),10)||0),f[g]+=v[m]||0,b.over[m]&&(f[g]+=e["x"===c?"width":"height"]()*b.over[m])):(d=e[m],f[g]=d.slice&& "%"===d.slice(-1)?parseFloat(d)/100*n:d);b.limit&&/^\d+$/.test(f[g])&&(f[g]=0>=f[g]?0:Math.min(f[g],n));!a&&1<b.axis.length&&(h===f[g]?f={}:u&&(k(b.onAfterFirst),f={}))});k(b.onAfter)}})};p.max=function(a,d){var b="x"===d?"Width":"Height",h="scroll"+b;if(!n(a))return a[h]-$(a)[b.toLowerCase()]();var b="client"+b,k=a.ownerDocument||a.document,l=k.documentElement,k=k.body;return Math.max(l[h],k[h])-Math.min(l[b],k[b])};$.Tween.propHooks.scrollLeft=$.Tween.propHooks.scrollTop={get:function(a){return $(a.elem)[a.prop]()}, set:function(a){var d=this.get(a);if(a.options.interrupt&&a._last&&a._last!==d)return $(a.elem).stop();var b=Math.round(a.now);d!==b&&($(a.elem)[a.prop](b),a._last=this.get(a))}};return p});
 
 // Smarter resize event
 // http://www.paulirish.com/2009/throttled-smartresize-jquery-event-handler/
@@ -13866,6 +13872,10 @@ $(function() {
   $('.port-entry').on('keyup change blur', function(event) {checkPortField(event.target);});
   $('.port-entry').each(function() {checkPortField(this);});
 
+  // Check for uniqueness between local ports
+  $('.local-port').on('keyup change blur', function(event) {checkLocalPorts();});
+  $('.local-port').each(function() {checkLocalPorts();});
+
   // Disable the other upstream proxy settings if skipping
   $('#SkipUpstreamProxy').change(skipUpstreamProxyUpdate);
   skipUpstreamProxyUpdate();
@@ -13884,13 +13894,25 @@ $(function() {
         !$(this).parent().is($('#settings-tab'))) { // we won't be active
       var settingsJSON = settingsToJSON();
       if (settingsJSON === false) {
-        // Settings are invalid. Scroll to the (first) offender and prevent switching tabs.
-        $('.tab-content').scrollTo(
-          $('#settings-pane .error').eq(0),
-          500,            // animation time
-          {offset: -50}); // leave some space for the alert
-        $('#settings-pane .error input').eq(0).focus();
         e.preventDefault();
+
+        // Settings are invalid. Expand the error sections and prevent switching tabs.
+        $('#settings-accordion .collapse .error').parents('.collapse').eq(0).collapse('show');
+        // The rest of the sections will collapse automatically.
+
+        // Scroll to the section, after allowing the section to expand
+        setTimeout(function() {
+          $('#settings-pane').scrollTo(
+            $('#settings-pane .error').parents('.accordion-group').eq(0),
+            {
+              duration: 500, // animation time
+              offset: -100,   // leave some space for the alert
+              onAfter: function() {
+                $('#settings-pane .error input').eq(0).focus();
+              }
+            });
+        }, 200);
+
         return;
       }
       else if (settingsJSON !== g_initialSettingsJSON) {
@@ -13959,6 +13981,8 @@ function settingsToJSON() {
     }
   });
 
+  valid = valid && checkLocalPorts();
+
   if (!valid) {
     return false;
   }
@@ -14012,6 +14036,30 @@ function checkPortField(target) {
     'hidden', $('#settings-pane .control-group.error').length === 0);
 
   return port;
+}
+
+// Returns true if the local parts are valid (i.e., unique), otherwise false.
+// Shows/hides an error message as appropriate.
+function checkLocalPorts() {
+  var ports = [];
+  var duplicate = false;
+  $('.local-port').each(function() {
+    var port = $(this).val();
+    if (port && ports.indexOf(port) >= 0) {
+      duplicate = true;
+    }
+    ports.push(port);
+  });
+
+  // Show/hide the error text depending on whether we have a duplicate
+  $('.local-port').parents('.control-group').toggleClass('error', duplicate);
+  $('.local-port-unique').toggleClass('hidden', !duplicate);
+
+  // Show/hide the error alert depending on whether we have an erroneous field
+  $('#settings-pane .value-error-alert').toggleClass(
+    'hidden', $('#settings-pane .control-group.error').length === 0);
+
+  return !duplicate;
 }
 
 // Some of the settings are incompatible with VPN mode. We'll modify the display
@@ -14864,22 +14912,26 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
                           HTTP/HTTPS
                         </label>
                         <div class="controls">
-                          <input type="text" id="LocalHttpProxyPort" class="port-entry"/>
+                          <input type="text" id="LocalHttpProxyPort" class="port-entry local-port"/>
                           <span class="help-inline LocalHttpProxyPort" data-i18n="settings#port-value-error-msg">
                             Must be between 1 and 65535.
                           </span>
                         </div>
                       </div>
-
                       <div class="control-group vpn-incompatible">
                         <label for="LocalSocksProxyPort" class="control-label"
                                 data-i18n="settings#local-proxy-ports#socks-label">SOCKS</label>
                         <div class="controls">
-                          <input type="text" id="LocalSocksProxyPort" class="port-entry"/>
+                          <input type="text" id="LocalSocksProxyPort" class="port-entry local-port"/>
                           <span class="help-inline LocalSocksProxyPort" data-i18n="settings#port-value-error-msg">
                             Must be between 1 and 65535.
                           </span>
                         </div>
+                        <span class="help-block">
+                          <span class="local-port-unique" data-i18n="settings#local-port-unique-error-msg">
+                            Local ports must be distinct from each other.
+                          </span>
+                        </span>
                         <span class="help-block">
                           <small class="vpn-incompatible-msg" data-i18n="settings#vpn-incompatible-msg">
                             (Doesn't work with VPN mode.)
